...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        app:hintTextAppearance="@style/Base.TextAppearance.AppCompat.Caption">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_email_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        app:hintTextAppearance="@style/Base.TextAppearance.AppCompat.Caption">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
...
